--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "coder100",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "puppeteer": "^2.1.1"
+    "express": "^4.18.1"
   }
 }
